--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,7 +1,11 @@
-#index{
- align:center;
+#header{
+	width:100%;
+	height:100px;
 }
-
+#header p{
+	text-align:center;
+	font-size:35px;
+}
 td {
 	text-align: center;
 	border:solid #000 1px;
@@ -54,7 +58,18 @@ table{
 .right {
 	width: 50%
 }
-
+a{
+	text-decoration: none;
+	color: #4B0082;
+}
+a:hover{
+	text-decoration: underline;
+	color: #0055A6;
+}
+a:focus{
+	outline: 0;
+	-moz-outline: 0
+}
 .footer {
-	border-top: 1px solid #ECECEC;
+	border-top: 200px solid #ECECEC;
 }
